crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
typedef void (*UniffiCallbackInterfaceFree)(uint64_t
    );
typedef uint64_t (*UniffiCallbackInterfaceClone)(uint64_t
    );
typedef void (*UniffiCallbackInterfaceToolHandlerMethod0)(uint64_t, RustBuffer, RustBuffer* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceTransportMethod0)(uint64_t, RustBuffer, void* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceTransportMethod1)(uint64_t, RustBuffer* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceTransportMethod2)(uint64_t, void* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef struct UniffiVTableCallbackInterfaceToolHandler {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceToolHandlerMethod0 _Nonnull handle;
} UniffiVTableCallbackInterfaceToolHandler;
typedef struct UniffiVTableCallbackInterfaceTransport {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceTransportMethod0 _Nonnull send;
    UniffiCallbackInterfaceTransportMethod1 _Nonnull recv;
    UniffiCallbackInterfaceTransportMethod2 _Nonnull close;
} UniffiVTableCallbackInterfaceTransport;
RustBuffer uniffi_spoke_connect_fn_method_remoteadapterffi_state(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_init_callback_vtable_toolhandler(const UniffiVTableCallbackInterfaceToolHandler* _Nonnull vtable
);
void uniffi_spoke_connect_fn_init_callback_vtable_transport(const UniffiVTableCallbackInterfaceTransport* _Nonnull vtable
);
void uniffi_spoke_connect_fn_func_check_response_correlation(RustBuffer expected_session_id, uint64_t expected_sequence, RustBuffer expected_request_id, RustBuffer actual_session_id, uint64_t actual_sequence, RustBuffer actual_request_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_func_derive_peer_id_from_ed25519_pubkey(RustBuffer pubkey, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_spoke_connect_fn_func_dispatch_allowed(RustBuffer op, RustBuffer negotiated_capabilities, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_spoke_connect_fn_func_is_allowlisted(RustBuffer allowlist, RustBuffer peer_id, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_func_protocol_version(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_spoke_connect_fn_func_required_capability(RustBuffer op, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_spoke_connect_fn_func_sign_hello_ed25519(RustBuffer secret, RustBuffer nonce, RustBuffer host_json, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_func_verify_hello_ed25519(RustBuffer public_key, RustBuffer expected_peer_id, RustBuffer hello_json, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_func_connect_responder_ffi(uint64_t transport, RustBuffer seed, RustBuffer manifest_json, RustBuffer allowlist, RustBuffer peer_keys, RustBuffer ports, RustBuffer invoke_timeout_ms, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_func_loopback_transport_pair(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_func_new_multi_peer_router_ffi(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_func_connect_remote_adapter_ffi(uint64_t transport, RustBuffer local_seed, RustBuffer local_manifest_json, RustBuffer remote_pubkey, RustBuffer allowlist, RustBuffer invoke_timeout_ms, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_spoke_connect_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_spoke_connect_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_spoke_connect_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_spoke_connect_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_spoke_connect_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_spoke_connect_rust_future_cancel_u8(uint64_t handle
);
void ffi_spoke_connect_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_spoke_connect_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_spoke_connect_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_spoke_connect_rust_future_cancel_i8(uint64_t handle
);
void ffi_spoke_connect_rust_future_free_i8(uint64_t handle
);
int8_t ffi_spoke_connect_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_spoke_connect_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_spoke_connect_rust_future_cancel_u16(uint64_t handle
);